syntax = "proto3";

package objectstore;

import "google/protobuf/timestamp.proto";
import "util.proto";

option java_package = "io.provenance.os.proto";
option java_outer_classname = "Objects";

service ObjectService {
    rpc Put(stream ChunkBidi) returns (ObjectResponse) {};

    rpc Get(Sha512Request) returns (stream ChunkBidi) {};

    // rpc GetByUuid(UUID) returns (stream ChunkBidi) {};
}

message ChunkBidi {
    oneof impl {
        MultiStreamHeader multi_stream_header = 1;
        Chunk chunk = 2;
    }
}

message Sha512Request {
    bytes hash = 1;
    bytes public_key = 2;
}

message Chunk {
    StreamHeader header = 1;
    oneof impl {
        bytes data = 2;
        bytes value = 3;
        ChunkEnd end = 4;
    }
}

message ChunkEnd {}

message MultiStreamHeader {
    int32 stream_count = 1;
    map<string, string> metadata = 2;
}

message StreamHeader {
    string name = 1;
    int64 content_length = 2;
}

message ObjectResponse {
    reserved 2, 9, 10, 12, 13, 14;
    reserved "object_uuid", "effective_start_date", "effective_end_date", "created_by", "updated", "updated_by";

    UUID uuid = 1;
    bytes hash = 3;
    repeated Signature signatures = 4;
    string uri = 5;
    string bucket = 6;
    string name = 7;
    ObjectMetadata metadata = 8;
    google.protobuf.Timestamp created = 11;
}

message ObjectMetadata {
    reserved 1, 2, 5, 6, 7, 8, 9;
    reserved "uuid", "document_uuid", "connector_class", "created", "created_by", "updated", "updated_by";

    bytes sha512 = 3;
    int64 length = 4;
    int64 content_length = 10;
}

message Signature {
    bytes signature = 1;
    bytes public_key = 2;
}
